--- a/templates/altaVuelo.html
+++ b/templates/altaVuelo.html
@@ -13,7 +13,7 @@
                 <h3 class="panel-title">Alta vuelo</h3>
             </div>
             <div class="panel-body container-fluid">
-                <form method="POST" action="/apicall/hotels">
+                <form method="POST" action="/apicall/flights">
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
